# openapi/api.swagger.json
@@ -1,10 +1,13 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "proto/guma/v1/item.proto",
+    "title": "proto/guma/v1/announcement.proto",
     "version": "version not set"
   },
   "tags": [
+    {
+      "name": "AnnouncementService"
+    },
     {
       "name": "AuctionService"
     },
@@ -359,6 +362,241 @@
         ],
         "tags": [
           "GuildService"
+        ]
+      }
+    },
+    "/v1/guilds/{guildId}/announcements": {
+      "get": {
+        "operationId": "AnnouncementService_ListAnnouncements",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ListAnnouncementsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "guildId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "includeDrafts",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "tags": [
+          "AnnouncementService"
+        ]
+      },
+      "post": {
+        "operationId": "AnnouncementService_CreateAnnouncementDraft",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CreateAnnouncementDraftResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "guildId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AnnouncementServiceCreateAnnouncementDraftBody"
+            }
+          }
+        ],
+        "tags": [
+          "AnnouncementService"
+        ]
+      }
+    },
+    "/v1/guilds/{guildId}/announcements/{announcementId}": {
+      "get": {
+        "operationId": "AnnouncementService_GetAnnouncement",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetAnnouncementResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "guildId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "announcementId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "AnnouncementService"
+        ]
+      },
+      "delete": {
+        "operationId": "AnnouncementService_DeleteAnnouncementDraft",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1DeleteAnnouncementDraftResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "guildId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "announcementId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "AnnouncementService"
+        ]
+      },
+      "patch": {
+        "operationId": "AnnouncementService_UpdateAnnouncementDraft",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1UpdateAnnouncementDraftResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "guildId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "announcementId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AnnouncementServiceUpdateAnnouncementDraftBody"
+            }
+          }
+        ],
+        "tags": [
+          "AnnouncementService"
+        ]
+      }
+    },
+    "/v1/guilds/{guildId}/announcements/{announcementId}/publish": {
+      "post": {
+        "operationId": "AnnouncementService_PublishAnnouncement",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1PublishAnnouncementResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "guildId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "announcementId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AnnouncementServicePublishAnnouncementBody"
+            }
+          }
+        ],
+        "tags": [
+          "AnnouncementService"
         ]
       }
     },
@@ -3208,6 +3446,26 @@
     }
   },
   "definitions": {
+    "AnnouncementServiceCreateAnnouncementDraftBody": {
+      "type": "object"
+    },
+    "AnnouncementServicePublishAnnouncementBody": {
+      "type": "object"
+    },
+    "AnnouncementServiceUpdateAnnouncementDraftBody": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string"
+        },
+        "content": {
+          "type": "string"
+        },
+        "pinned": {
+          "type": "boolean"
+        }
+      }
+    },
     "AuctionServiceCancelAuctionBody": {
       "type": "object",
       "properties": {
@@ -3705,6 +3963,47 @@
         }
       }
     },
+    "v1Announcement": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "guildId": {
+          "type": "string"
+        },
+        "authorId": {
+          "type": "string"
+        },
+        "authorName": {
+          "type": "string"
+        },
+        "title": {
+          "type": "string"
+        },
+        "content": {
+          "type": "string"
+        },
+        "pinned": {
+          "type": "boolean"
+        },
+        "status": {
+          "type": "string"
+        },
+        "publishedAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
     "v1AppConfig": {
       "type": "object",
       "properties": {
@@ -4011,6 +4310,14 @@
         }
       }
     },
+    "v1CreateAnnouncementDraftResponse": {
+      "type": "object",
+      "properties": {
+        "announcement": {
+          "$ref": "#/definitions/v1Announcement"
+        }
+      }
+    },
     "v1CreateAuctionResponse": {
       "type": "object",
       "properties": {
@@ -4090,6 +4397,9 @@
           "$ref": "#/definitions/v1QuickStats"
         }
       }
+    },
+    "v1DeleteAnnouncementDraftResponse": {
+      "type": "object"
     },
     "v1DeleteCheckInResponse": {
       "type": "object",
@@ -4185,6 +4495,14 @@
       "properties": {
         "invitation": {
           "$ref": "#/definitions/v1Invitation"
+        }
+      }
+    },
+    "v1GetAnnouncementResponse": {
+      "type": "object",
+      "properties": {
+        "announcement": {
+          "$ref": "#/definitions/v1Announcement"
         }
       }
     },
@@ -4708,6 +5026,18 @@
         "maxFileSizeBytes": {
           "type": "string",
           "format": "int64"
+        }
+      }
+    },
+    "v1ListAnnouncementsResponse": {
+      "type": "object",
+      "properties": {
+        "announcements": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1Announcement"
+          }
         }
       }
     },
@@ -5350,6 +5680,14 @@
         }
       }
     },
+    "v1PublishAnnouncementResponse": {
+      "type": "object",
+      "properties": {
+        "announcement": {
+          "$ref": "#/definitions/v1Announcement"
+        }
+      }
+    },
     "v1PurchaseTicketsResponse": {
       "type": "object",
       "properties": {
@@ -5616,6 +5954,14 @@
         },
         "updatedWallet": {
           "$ref": "#/definitions/v1Wallet"
+        }
+      }
+    },
+    "v1UpdateAnnouncementDraftResponse": {
+      "type": "object",
+      "properties": {
+        "announcement": {
+          "$ref": "#/definitions/v1Announcement"
         }
       }
     },
